--- a/OptionGenerator.csproj
+++ b/OptionGenerator.csproj
@@ -15,10 +15,10 @@
 
   <ItemGroup>
     <Reference Include="RiskOfOptions">
-      <HintPath>RiskOfOptions.dll</HintPath>
+      <HintPath>Resources/RiskOfOptions.dll</HintPath>
     </Reference>
     <Reference Include="SimpleJSON">
-      <HintPath>SimpleJSON.dll</HintPath>
+      <HintPath>Resources/SimpleJSON.dll</HintPath>
     </Reference>
   </ItemGroup>
 
