--- a/Resources/manifest.json
+++ b/Resources/manifest.json
@@ -3,7 +3,7 @@
 	"version_number": "0.1.2",
 	"website_url": "https://github.com/6thmoon/OptionGenerator",
 	"description":
-		"Automatic option menu integration via \"Risk of Options\".",
+		"Automatic settings/configuration menu integration via \"Risk of Options\".",
 	"dependencies": [
 			"bbepis-BepInExPack-5.4.2100",
 			"Rune580-Risk_Of_Options-2.8.0"
